2011-02-08  Richard Guenther  <rguenther@suse.de>

PR tree-optimization/47632
	* tree-ssa-forwprop.c (remove_prop_source_from_use): Remove
	unused up_to_stmt parameter, return whether cfg-cleanup is
	necessary, remove EH info properly.
	(forward_propagate_into_gimple_cond): Adjust caller.
	(forward_propagate_into_cond): Likewise.
	(forward_propagate_comparison): Likewise.
	(tree_ssa_forward_propagate_single_use_vars): Make
	forward_propagate_comparison case similar to the two others.

	* g++.dg/opt/pr47632.C: New testcase.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@169917 138bc75d-0d04-0410-961f-82ee72b054a4